2015-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pltotf.ch, vptovf.ch: Send also real numbers to stderr,
	completing the change from 2015-01-09 (report from Norbert).

2015-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitype.ch: Removed a spurious duplicate statement.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mftraptest (removed): Renamed ...
	* mftraptest.test (new):  ... into this.
	* triptest (removed): Renamed ...
	* triptest.test (new):... into this.
	* triptrap-sh: Adapted.
	* Makefile.am, am/bootstrap.am, am/cweb.am, am/texmf.am,
	am/web.am, libmd5/am/md5.am: Dependencies for 'make check'.

2015-07-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.h: Add \pdfmdfivesum to XeTeX.

2015-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/web.am: Fix dependencies for 'make check'.

2015-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h: Declare convertStringToHexString() and getmd5sum().

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/texmf.am: Always create mf-nowin, either as extra program
	or as symlink.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (tie_c, tie_m): New variables.
	* am/texmf.am: Use $(tie_c).

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrate MFLua and MFLuaJIT.
	* mfluadir, mfluajitdir: New directories.
	* mf.ch: Avoid conflict with mfluadir/mf-lua.ch.
	* Makefile.am, ac/web2c.ac, tangle-sh.in, texmfmp.h,
	* texmfmp-help.h, triptrap-sh: Adapted.

2015-05-21  Karl Berry  <karl@tug.org>

	* TL'15.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap/{mftrap,mptrap,trip}.diffs: Updated for TL 2015.

2015-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mftalk.h (removed): Moved from here to window/mftalk.h.
	* am/texmf.am: Adapted.

2015-03-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac: Define kpse_mf_progs and use KPSE_WITH_XMF.
	* configure.ac: Use KPSE_XMF_COND.

2015-03-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
