@@ -1,6 +1,6 @@
 /* lepdflib.cc
 
-   Copyright 2009-2013 Taco Hoekwater <taco@luatex.org>
+   Copyright 2009-2015 Taco Hoekwater <taco@luatex.org>
    Copyright 2009-2013 Hartmut Henkel <hartmut@luatex.org>
 
    This file is part of LuaTeX.
@@ -64,11 +64,9 @@ static const char *ErrorCodeNames[] = { "None", "OpenFile", "BadCatalog",
 #define M_PDFRectangle     "epdf.PDFRectangle"
 #define M_Ref              "epdf.Ref"
 #define M_Stream           "epdf.Stream"
-#ifdef HAVE_STRUCTTREEROOT_H
 #define M_StructElement    "epdf.StructElement"
 #define M_Attribute        "epdf.Attribute"
 #define M_TextSpan         "epdf.TextSpan"
-#endif
 #define M_StructTreeRoot   "epdf.StructTreeRoot"
 #define M_XRefEntry        "epdf.XRefEntry"
 #define M_XRef             "epdf.XRef"
@@ -101,11 +99,9 @@ new_poppler_userdata(Page);
 new_poppler_userdata(PDFRectangle);
 new_poppler_userdata(Ref);
 new_poppler_userdata(Stream);
-#ifdef HAVE_STRUCTTREEROOT_H
 new_poppler_userdata(StructElement);
 new_poppler_userdata(Attribute);
 new_poppler_userdata(TextSpan);
-#endif
 new_poppler_userdata(StructTreeRoot);
 new_poppler_userdata(XRef);
 
@@ -157,7 +153,6 @@ static int l_new_Array(lua_State * L)
     return 1;
 }
 
-#ifdef HAVE_STRUCTTREEROOT_H
 static int l_new_Attribute(lua_State * L)
 {
     Attribute::Type t;
@@ -326,9 +321,6 @@ static int l_AttributeOwner_Type(lua_State * L) {
 }
 
 
-#endif
-
-
 static int l_new_Dict(lua_State * L)
 {
     udstruct *uxref, *uout;
@@ -370,12 +362,10 @@ static int l_new_PDFRectangle(lua_State * L)
 static const struct luaL_Reg epdflib_f[] = {
     {"open", l_open_PDFDoc},
     {"Array", l_new_Array},
-#ifdef HAVE_STRUCTTREEROOT_H
     {"Attribute",          l_new_Attribute},
     {"StructElement_Type", l_StructElement_Type},
     {"Attribute_Type",     l_Attribute_Type},
     {"AttributeOwner_Type",l_AttributeOwner_Type},
-#endif
     {"Dict", l_new_Dict},
     {"Object", l_new_Object},
     {"PDFRectangle", l_new_PDFRectangle},
@@ -782,11 +772,7 @@ static int m_Catalog_getPageRef(lua_State * L)
 
 m_poppler_get_GOOSTRING(Catalog, getBaseURI);
 m_poppler_get_GOOSTRING(Catalog, readMetadata);
-#ifdef HAVE_STRUCTTREEROOT_H
 m_poppler_get_poppler(Catalog, StructTreeRoot, getStructTreeRoot);
-#else
-m_poppler_get_poppler(Catalog, Object, getStructTreeRoot);
-#endif
 
 static int m_Catalog_findPage(lua_State * L)
 {
@@ -2360,22 +2346,14 @@ static int m_PDFDoc_readMetadata(lua_State * L)
 
 static int m_PDFDoc_getStructTreeRoot(lua_State * L)
 {
-#ifdef HAVE_STRUCTTREEROOT_H
     StructTreeRoot *obj;
-#else
-    Object *obj;
-#endif
     udstruct *uin, *uout;
     uin = (udstruct *) luaL_checkudata(L, 1, M_PDFDoc);
     if (uin->pd != NULL && uin->pd->pc != uin->pc)
         pdfdoc_changed_error(L);
     if (((PdfDocument *) uin->d)->doc->getCatalog()->isOk()) {
         obj = ((PdfDocument *) uin->d)->doc->getStructTreeRoot();
-#ifdef HAVE_STRUCTTREEROOT_H
         uout = new_StructTreeRoot_userdata(L);
-#else
-        uout = new_Object_userdata(L);
-#endif
         uout->d = obj;
         uout->pc = uin->pc;
         uout->pd = uin->pd;
@@ -2740,7 +2718,6 @@ static const struct luaL_Reg Stream_m[] = {
     {NULL, NULL}                // sentinel
 };
 
-#ifdef HAVE_STRUCTTREEROOT_H
 //**********************************************************************
 // TextSpan
 
@@ -3294,7 +3271,6 @@ static const struct luaL_Reg StructTreeRoot_m[] = {
   {"__tostring", m_StructTreeRoot__tostring},
   {NULL, NULL}                // sentinel
 };
-#endif
 
 //**********************************************************************
 // XRef
@@ -3431,12 +3407,10 @@ int luaopen_epdf(lua_State * L)
     setfuncs_meta(PDFRectangle);
     setfuncs_meta(Ref);
     setfuncs_meta(Stream);
-#ifdef HAVE_STRUCTTREEROOT_H
     setfuncs_meta(Attribute);
     setfuncs_meta(StructElement);
     setfuncs_meta(StructTreeRoot);
     setfuncs_meta(TextSpan);
-#endif
     setfuncs_meta(XRef);
     setfuncs_meta(XRefEntry);
 
